NetBSD Problem Report #38817

From blymn@internode.on.net  Sun Jun  1 14:36:05 2008
Return-Path: <blymn@internode.on.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2711D63B8BC
	for <gnats-bugs@gnats.netbsd.org>; Sun,  1 Jun 2008 14:36:05 +0000 (UTC)
Message-Id: <200806011218.m51CIHkM006935@siren.cust.internode.on.net>
Date: Sun, 1 Jun 2008 21:48:17 +0930 (CST)
From: blymn@internode.on.net
Reply-To: blymn@internode.on.net
To: gnats-bugs@gnats.NetBSD.org
Subject: regression in acpi sleep on lifebook S6510
X-Send-Pr-Version: 3.95

>Number:         38817
>Category:       kern
>Synopsis:       regression in acpi sleep on lifebook S6510
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    jmcneill
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jun 01 14:40:00 +0000 2008
>Closed-Date:    Mon Mar 02 20:53:00 +0000 2009
>Last-Modified:  Mon Mar 02 20:53:00 +0000 2009
>Originator:     Brett Lymn (Master of the Siren)
>Release:        NetBSD 4.99.55 and -current as of 1st June 2008
>Organization:
Brett Lymn
>Environment:
NetBSD 4.99.55 (ROVER2) #32: Sat May 24 20:16:46 CST 2008

Architecture: i386
Machine: i386
>Description:
	There appears to have been a regression in the ACPI S3 sleep support
on my laptop.  With a kernel from 4.99.55 if I disable a couple of devices
that did not have power hooks defined then I am able to sleep the laptop
and, with the limited testing I have done, resume without problems.  I
updated my sources 20080601 and I no longer need to disable the devices
I used to need to before because hooks have been added but the machine now
hangs when I try to sleep it, the last kernel message is "flushing disk
caches" and it just stops there.  I added the flags -vxs to my boot command
to try and see where the hang was but when I do this the machine actually
manages to sleep so I guess the extra delays introduced by the debug output
are enough to make the ACPI sleep work.

>How-To-Repeat:
	If you have a fujitsu lifebook S6510 (maybe other models, I don't
know) then do the following:

1) using a 4.99.55 kernel, use boot -c and disable mskc, msk and lpt.  Use
   apm -d -z to sleep the machine, observe the machine sleeps, press the
   power button, the machine wakes up.

2) using a kernel built from 20080601 sources, boot the machine.  Use 
   apm -d -z and observe the machine just hangs after the kernel says
   "flushing disk caches"

3) using the same kernel as in 2, use boot -vxs to boot the machine.
   Use apm -d -z and observe a lot of debug output and then the machine
   sleeps successfully, press the power button, the machine wakes up.

>Fix:
  Unknown

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->joerg
Responsible-Changed-By: joerg@NetBSD.org
Responsible-Changed-When: Wed, 11 Jun 2008 19:01:55 +0000
Responsible-Changed-Why:
ACPI issue


State-Changed-From-To: open->feedback
State-Changed-By: joerg@NetBSD.org
State-Changed-When: Wed, 11 Jun 2008 19:01:55 +0000
State-Changed-Why:
smb@ reported issues with the last ACPICA update.
Can you try with sources from Apr 12th?


From: Brett Lymn <blymn@internode.on.net>
To: gnats-bugs@NetBSD.org
Cc: joerg@NetBSD.org, kern-bug-people@NetBSD.org, netbsd-bugs@NetBSD.org,
        gnats-admin@NetBSD.org
Subject: Re: kern/38817 (regression in acpi sleep on lifebook S6510)
Date: Mon, 16 Jun 2008 20:24:46 +0930

 On Wed, Jun 11, 2008 at 07:01:56PM +0000, joerg@NetBSD.org wrote:
 > 
 > Can you try with sources from Apr 12th?
 > 

 The machine sleeps reliably with sources from April 12th - though I have
 to disable the usb hubs to get the kernel to boot (stack overflow) and
 the msk, mskc and lpt devices.

 The sleep failure with -current does seem a bit erratic, sometimes the
 machine will sleep ok with -current but sometimes it just hangs.  It seems
 like if the machine manages to sleep it will do so quite consistently for
 a while and at other times it will just decide it is going to hang on sleep.
 In either case it seems to be stuck in that "mode" for multiple tries, even
 power off/on cycles don't change the behaviour, it only seems to change
 if the machine is left off for a while - how long that while is I don't
 know.

 -- 
 Brett Lymn

State-Changed-From-To: feedback->open
State-Changed-By: joerg@NetBSD.org
State-Changed-When: Tue, 23 Sep 2008 10:58:50 +0000
State-Changed-Why:
Feedback was provided.


Responsible-Changed-From-To: joerg->jmcneill
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Fri, 30 Jan 2009 12:52:48 +0000
Responsible-Changed-Why:
ACPI sleep problem.


State-Changed-From-To: open->feedback
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Fri, 30 Jan 2009 12:52:48 +0000
State-Changed-Why:
I think suspend/resume is broken on -current, but could you try this patch on
5.0 to see if the problem is resolved?


From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/38817 CVS commit: src/sys/dev/acpi
Date: Fri, 30 Jan 2009 12:51:03 +0000 (UTC)

 Module Name:	src
 Committed By:	jmcneill
 Date:		Fri Jan 30 12:51:03 UTC 2009

 Modified Files:
 	src/sys/dev/acpi: acpi.c
 	src/sys/dev/acpi/acpica: OsdSchedule.c OsdSynch.c

 Log Message:
 PR# kern/38817: regression in acpi sleep on lifebook S6510

 Switch to polling mode after the acpi(4) device has been suspended as
 interrupts will be disabled later on and we may still need to execute
 AML that tries to sleep or wait on a semaphore.


 To generate a diff of this commit:
 cvs rdiff -r1.122 -r1.123 src/sys/dev/acpi/acpi.c
 cvs rdiff -r1.8 -r1.9 src/sys/dev/acpi/acpica/OsdSchedule.c
 cvs rdiff -r1.10 -r1.11 src/sys/dev/acpi/acpica/OsdSynch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/38817 CVS commit: [netbsd-5] src/sys/dev/acpi
Date: Mon,  2 Feb 2009 20:37:35 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Mon Feb  2 20:37:35 UTC 2009

 Modified Files:
 	src/sys/dev/acpi [netbsd-5]: acpi.c
 	src/sys/dev/acpi/acpica [netbsd-5]: OsdSchedule.c OsdSynch.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #381):
 	sys/dev/acpi/acpi.c: revision 1.123
 	sys/dev/acpi/acpica/OsdSchedule.c: revision 1.9
 	sys/dev/acpi/acpica/OsdSynch.c: revision 1.11
 PR# kern/38817: regression in acpi sleep on lifebook S6510
 Switch to polling mode after the acpi(4) device has been suspended as
 interrupts will be disabled later on and we may still need to execute
 AML that tries to sleep or wait on a semaphore.


 To generate a diff of this commit:
 cvs rdiff -r1.120 -r1.120.4.1 src/sys/dev/acpi/acpi.c
 cvs rdiff -r1.8 -r1.8.8.1 src/sys/dev/acpi/acpica/OsdSchedule.c
 cvs rdiff -r1.10 -r1.10.20.1 src/sys/dev/acpi/acpica/OsdSynch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Mon, 02 Mar 2009 20:53:00 +0000
State-Changed-Why:
Feedback timeout, but should be fixed in 5.0.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.