sys/dev/acpi/acpica/OsdSynch.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: OsdSynch.c,v 1.10 2007/12/15 00:39:25 perry Exp $	*/
+/*	$NetBSD: OsdSynch.c,v 1.11 2009/01/30 12:51:03 jmcneill Exp $	*/
 
 /*
  * Copyright 2001 Wasabi Systems, Inc.
@@ -69,7 +69,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: OsdSynch.c,v 1.10 2007/12/15 00:39:25 perry Exp $");
+__KERNEL_RCSID(0, "$NetBSD: OsdSynch.c,v 1.11 2009/01/30 12:51:03 jmcneill Exp $");
 
 #include <sys/param.h>
 #include <sys/malloc.h>
@@ -77,6 +77,8 @@ __KERNEL_RCSID(0, "$NetBSD: OsdSynch.c,v 1.10 2007/12/15 00:39:25 perry Exp $");
 #include <sys/condvar.h>
 #include <sys/kernel.h>
 #include <sys/proc.h>
+
+extern int acpi_suspended;
 
 #include <dev/acpi/acpica.h>
 
@@ -181,7 +183,7 @@ AcpiOsWaitSemaphore(ACPI_SEMAPHORE Handle, UINT32 Units, UINT16 Timeout)
 
 	if (as == NULL)
 		return_ACPI_STATUS(AE_BAD_PARAMETER);
-	if (cold)
+	if (cold || acpi_suspended)
 		return_ACPI_STATUS(AE_OK);
 
 	/* A timeout of 0xFFFF means "forever". */
